--- a/en/about/index.html
+++ b/en/about/index.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="About - TCF About" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://wwww.nomdusite.ch" />
-<meta property="og:image" content="../../img/beaulac-a-propos.jpg" />
+<meta property="og:image" content="../../img/background_img.jpg" />
 <meta property="og:description" content="TCF About" />
 <!-- Meta data SEO End-->
 
@@ -88,10 +88,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Companies <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="../beaulac-sa">TCF About</a></li>
-                <li><a href="../societe-financiere-des-bastions-sa">TCF About</a></li>
-                <li><a href="../beaulac-management-services">TCF About</a></li>
-                <li><a href="../beaulac-industry-and-finance">TCF About</a></li>
+                <li><a href="../my_services/service1">TCF About</a></li>
               </ul>
             </li>
             <li><a href="../#contact" class="page-scroll">Contact</a></li>
@@ -110,7 +107,7 @@
     </nav>
 <!-- Header -->
 <header id="header">
-  <div class="intro intro-secondaire" style="background-image: url(../../img/beaulac-a-propos.jpg); background-attachment: scroll;">
+  <div class="intro intro-secondaire" style="background-image: url(../../img/background_img.jpg); background-attachment: scroll;">
       <div class="container image-bg">
         <div class="row section-ctn">
           <div class="col-md-offset-5 col-md-7 section-main">
