--- a/en/index.html
+++ b/en/index.html
@@ -6,21 +6,21 @@
 
 <!-- Meta data SEO
     ================================================== -->
-<title>Beaulac Group - Wealth management in Geneva</title>
+<title>TCF EN</title>
 <meta name="keywords" content="" />
-<meta name="description" content="Based in Geneva, Beaulac Group is comprised of 4 distinct entities engaged in the fields of asset management, inheritance and tax planning, family office and consulting to family businesses." />
+<meta name="description" content="TCF EN" />
 
 <!-- Twitter Card data
     ================================================== -->
-<meta name="twitter:card" value="Based in Geneva, Beaulac Group is comprised of 4 distinct entities engaged in the fields of asset management, inheritance and tax planning, family office and consulting to family businesses.">
+<meta name="twitter:card" value="TCF EN">
 
 <!-- Open Graph data
     ================================================== -->
 <meta property="og:title" content="Beaulac Group - Wealth management in Geneva" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://wwww.nomdusite.ch" />
-<meta property="og:image" content="../img/beaulac-lp-hero.jpg" />
-<meta property="og:description" content="Based in Geneva, Beaulac Group is comprised of 4 distinct entities engaged in the fields of asset management, inheritance and tax planning, family office and consulting to family businesses." />
+<meta property="og:image" content="../img/background_img.jpg" />
+<meta property="og:description" content="TCF EN" />
 <!-- Meta data SEO End-->
 
 <!-- Fonts
@@ -81,10 +81,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Companies <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="./beaulac-sa">Beaulac S.A.</a></li>
-                <li><a href="./societe-financiere-des-bastions-sa">Société Financière des Bastions S.A. (SFB)</a></li>
-                <li><a href="./beaulac-management-services">Beaulac Management Services (BMS)</a></li>
-                <li><a href="./beaulac-industry-and-finance">Beaulac Industry and Finance (BIF)</a></li>
+                <li><a href="./my_services/service1">TCF EN</a></li>
               </ul>
             </li>
             <li><a href="./#contact" class="page-scroll">Contact</a></li>
@@ -103,13 +100,13 @@
     </nav>
 <!-- Header -->
 <header id="header">
-  <div class="intro intro-principale" style="background-image: url(../img/beaulac-lp-hero.jpg); background-attachment: scroll;">
+  <div class="intro intro-principale" style="background-image: url(../img/background_img.jpg); background-attachment: scroll;">
       <div class="container image-bg">
         <div class="row section-ctn">
           <div class="col-md-offset-6 col-md-5 section-main">
-            <h1 class="wow fadeInRight uppercase content" data-wow-duration="1s" id="header-title">Beaulac Group</h1>
+            <h1 class="wow fadeInRight uppercase content" data-wow-duration="1s" id="header-title">TCF EN</h1>
             <hr class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
-            <a href="./beaulac-sa" class="btn-xl-contact btn-xl-contact-invert-color btn btn-header content" id="header-button1">Wealth management</a>
+            <a href="./beaulac-sa" class="btn-xl-contact btn-xl-contact-invert-color btn btn-header content" id="header-button1">TCF EN</a>
             <a href="./about" class="btn-xl-contact btn-xl-contact-invert-color btn btn-header content" id="header-button2">About</a>
 
             </div>
@@ -122,31 +119,31 @@
   <div class="container-fluid basic-bg">
     <div class="row section-ctn">
       <div class="col-md-offset-1 col-md-5 col-sm-offset-2 col-sm-8">
-        <h1 class="content" id="societes-title">Beaulac Group, 4 distinct entities</h1>
+        <h1 class="content" id="societes-title">TCF EN</h1>
         <hr>
-        <p class="content" id="societes-paragraphe1">Beaulac Group is comprised of 4 very distinct entities offering complementary and synergic services.</p>
-        <p class="content" id="societes-paragraphe2">The high complexity of today’s financial markets implies a thorough understanding of the financial landscape and succession planning processes. The 4 entities of the Beaulac Group allow for global management of your assets, leaving nothing to chance.</p>
+        <p class="content" id="societes-paragraphe1">TCF EN</p>
+        <p class="content" id="societes-paragraphe2">TCF EN</p>
       </div>
       <div class="col-md-offset-1 col-md-3 col-sm-offset-2 col-sm-8">
         <div class="le-group">
           <div>
-            <h3 class="content" id="societes-item1-title">Beaulac S.A.</h3>
-            <p class="content" id="societes-item1-subtitle">Global wealth management</p>
+            <h3 class="content" id="societes-item1-title">TCF EN</h3>
+            <p class="content" id="societes-item1-subtitle">TCF EN</p>
             <a href="./beaulac-sa">Learn More ></a>
           </div>
           <div>
-            <h3 class="content" id="societes-item2-title">Société Financière des Bastions S.A. (SFB)</h3>
-            <p class="content" id="societes-item2-subtitle">Investment on behalf of third parties</p>
-            <a href="./societe-financiere-des-bastions-sa">Learn More ></a>
+            <h3 class="content" id="societes-item2-title">TCF EN</h3>
+            <p class="content" id="societes-item2-subtitle">TCF EN</p>
+            <a href="./societe-financiere-des-bastions-sa">TCF EN</a>
           </div>
           <div>
-            <h3 class="content" id="societes-item3-title">Beaulac Management Services (BMS)</h3>
-            <p class="content" id="societes-item3-subtitle">Tax and inheritance planning</p>
+            <h3 class="content" id="societes-item3-title">TCF EN</h3>
+            <p class="content" id="societes-item3-subtitle">TCF EN</p>
             <a href="./beaulac-management-services">Learn More ></a>
           </div>
           <div>
-            <h3 class="content" id="societes-item4-title">Beaulac Industry and Finance (BIF)</h3>
-            <p class="content" id="societes-item4-subtitle">Small and mid-sized companies advice and support</p>
+            <h3 class="content" id="societes-item4-title">TCF EN</h3>
+            <p class="content" id="societes-item4-subtitle">TCF EN</p>
             <a href="./beaulac-industry-and-finance">Learn More ></a>
           </div>
         </div>
@@ -163,15 +160,15 @@
 
 <!-- Methodologie Section -->
 <div id="methodologie">
-  <div class="container-fluid image-bg img-cover" style="background-image: url(../img/beaulac-lp-a-propos.jpg);">
+  <div class="container-fluid image-bg img-cover" style="background-image: url(../img/background_img.jpg);">
     <div  class="row section-ctn">
       <div class="col-md-offset-2 col-md-2 col-sm-offset-2 col-sm-8 section-h2">
           <!-- <h2 class="wow fadeInUp">À propos</h2> -->
       </div>
       <div class="col-md-offset-1 col-md-6 col-sm-offset-2 col-sm-8 section-main">
-        <h1 class="content" id="about-section1-title">The architects of your wealth</h1>
+        <h1 class="content" id="about-section1-title">TCF EN</h1>
         <hr>
-        <p class="content" id="about-section1-paragraphe1">Since 1989, Beaulac Group has offered tailored solutions for effective management of your assets, with the utmost respect of international laws. Composed of 4 distinct and complementary entities, the group demonstrates a complete understanding of financial markets as well as strong risk assessment skills in order to support you through every stage of your life.</p>
+        <p class="content" id="about-section1-paragraphe1">TCF EN</p>
         <p><a href="./about" style="color:white;">Learn more ></a></p>
       </div>
     </div>
@@ -186,10 +183,10 @@
   <div class="container-fluid basic-bg">
     <div class="row section-ctn">
       <div class="col-md-offset-1 col-md-6 col-sm-offset-2 col-sm-8 section-main">
-        <h1 class="content" id="about-section2-title">We take the time to learn about all aspects of our clients</h1>
+        <h1 class="content" id="about-section2-title">TCF EN</h1>
         <hr>
-        <p class="content" id="about-section2-paragraphe1">For the past 30 years, we have been building with long-term relationships with our clients based on trust. We are proud to collaborate with families generation to generation. The human aspect of our profession ensures we foster close relationships with our clients and their families. </p>
-        <p class="content" id="about-section2-paragraphe2">As an established family-run firm, we guarantee consistent and personal interactions for a thorough understanding of your everyday needs, your personal financial environment and your fiscal situation.</p>
+        <p class="content" id="about-section2-paragraphe1">TCF EN</p>
+        <p class="content" id="about-section2-paragraphe2">TCF EN</p>
         <p><a href="./about">Learn More ></a></p>
       </div>
       <div class="col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-8 section-h2">
@@ -315,19 +312,19 @@
     <div class="row">
       <div class="col-xs-10 col-xs-offset-1 col-md-offset-8 col-md-4 contact-info-ctn">
         <div class="info-form-ctn">
-          <h2 class="no-lowercase" id="content-companyName">Beaulac S.A.</h2>
+          <h2 class="no-lowercase" id="content-companyName">TCF</h2>
           <hr>
           <p>
-            <text class="content-adresseLine1">Ch. Doctoresse-Champendal 4</text><br>
-            <text class="content-adresseLine2">Case Postale 62</text><br>
-            <text class="content-zip">CH - 1211 </text>
-            <text class="content-city">Genève 12</text>
+            <text class="content-adresseLine1">28, Rue des Remparts</text><br>
+            <text class="content-adresseLine2">P.O. Box 62</text><br>
+            <text class="content-zip">CH - 1844 </text>
+            <text class="content-city">Villeneuve</text>
           </p>
           <p>
-            Tel. : <text><a class="content-phone1" href="tel:+41227040880" style="color:#666;">+41 22 704 08 80</a><br></text>
-            Fax : <a class="content-fax" href="fax:+41227040888" style="color:#666;">+41 22 704 08 88</a>
+            Tel. : <text><a class="content-phone1" href="tel:+41227040880" style="color:#666;">+41 22 999 99 99</a><br></text>
+            Fax : <a class="content-fax" href="fax:+41227040888" style="color:#666;">+41 22 999 99 99</a>
           </p>
-          <p><a class="content-email1" href="mailto:info@beaulacgroup.ch" style="color:#666;">info@beaulacgroup.ch</a></p>
+          <p><a class="content-email1" href="mailto:" style="color:#666;">tcf@tcf.ch</a></p>
         </div>
       </div>
     </div>
@@ -339,7 +336,7 @@
   <div class="container text-center">
     <div class="row text-left">
       <div class="col-md-12">
-        <a class="page-scroll" href="#page-top"><img alt="Altras Sécurité" src="../img/logo.png"></a>
+        <a class="page-scroll" href="#page-top"><img alt="Altras Sécurité" src="./img/logo.png"></a>
       </div>
     </div>
     <div id="footer-ctn" class="row">
@@ -347,42 +344,42 @@
       <ul>
         <li class="content-adresseLine1">
           <a target="_blank" href="https://www.google.ch/maps/place/Beaulac+SA,+Soci%C3%A9t%C3%A9+Financi%C3%A8re+d+Investissement/@46.1917077,6.1643105,17z/data=!3m1!4b1!4m5!3m4!1s0x478c7ab3ff7d091d:0xf696e6d5d8717c08!8m2!3d46.1917077!4d6.1664992?hl=en">
-          4, Ch. Doctoresse-Champendal</a></li>
+          28, Rue des Remparts</a></li>
         <li class="content-adresseLine2">P.O. Box 62</li>
-        <li><text class="content-zip">CH - 1211 </text> <text class="content-city">Genève 12</text></li>
-        <li>Tél. : <a href="tel:+41227040880" class="content-phone1">+41 22 704 08 80</a></li>
-        <li>Fax : <a class="content-fax" href="fax:+41227040888">+41 22 704 08 88</a></li>
-        <li><a href="mailto:info@beaulacgroup.ch" class="content-email1">info@beaulacgroup.ch</a></li>
+        <li><text class="content-zip">CH - 1844 </text> <text class="content-city">Villeneuve</text></li>
+        <li>Tél. : <a href="tel:+41227040880" class="content-phone1">+41 22 999 99 99</a></li>
+        <li>Fax : <a class="content-fax" href="fax:+41227040888">+41 22 999 99 99</a></li>
+        <li><a href="mailto:info@beaulacgroup.ch" class="content-email1">tcf@tcf.ch</a></li>
       </ul>
     </div>
     <div id="footer-menu-socitetes" class="col-md-3">
       <div class="text-left">
         <ul>
-          <li class="list-title">4 distinct entities</li>
-          <li><a href="./beaulac-sa">Beaulac S.A. </a></li>
-          <li><a href="./societe-financiere-des-bastions-sa">Société Financière des Bastions S.A. (SFB)</a></li>
-          <li><a href="./beaulac-management-services">Beaulac Management Services (BMS)</a></li>
-          <li><a href="./beaulac-industry-and-finance">Beaulac Industry and Finance (BIF)</a></li>
+          <li class="list-title">TCF TEMPLATE</li>
+          <li><a href="./fr/beaulac-sa">TCF TEMPLATE </a></li>
+          <li><a href="./fr/societe-financiere-des-bastions-sa">TCF TEMPLATE</a></li>
+          <li><a href="./fr/beaulac-management-services">TCF TEMPLATE</a></li>
+          <li><a href="./fr/beaulac-industry-and-finance">TCF TEMPLATE</a></li>
         </ul>
       </div>
     </div>
     <div id="footer-menu-group" class="col-md-3">
       <div class="text-left">
         <ul>
-          <li class="list-title">About the Group</li>
-          <li><a href="./about#valeurs">Our values</a></li>
-          <li><a href="./about#accreditations-environnement">Accreditations & environment</a></li>
-          <li><a href="./about#histoire">Our history</a></li>
-          <li><a href="./about#equipe">Our team</a></li>
-          <li><a target="_blank" href="http://www.geneve-finance.ch/en-ch/overview">Geneva's financial place</a></li>
+          <li class="list-title">TCF TEMPLATE</li>
+          <li><a href="./fr/a-propos#valeurs">TCF TEMPLATE</a></li>
+          <li><a href="./fr/a-propos#accreditations-environnement">TCF TEMPLATE</a></li>
+          <li><a href="./fr/a-propos#histoire">TCF TEMPLATE</a></li>
+          <li><a href="./fr/a-propos#equipe">TCF TEMPLATE</a></li>
+          <li><a target="_blank" href="http://www.thecomputerfirm.com">TCF TEMPLATE</a></li>
         </ul>
       </div>
 
     </div>
     <div id="footer-about-copyright" class="col-md-3">
-      <p>Based in <a target="blank" href="https://www.google.ch/maps/place/Beaulac+SA,+Soci%C3%A9t%C3%A9+Financi%C3%A8re+d+Investissement/@46.1917077,6.1643105,17z/data=!3m1!4b1!4m5!3m4!1s0x478c7ab3ff7d091d:0xf696e6d5d8717c08!8m2!3d46.1917077!4d6.1664992?hl=en">
-        Geneva</a>, Beaulac Group is comprised of <a href="./#sous-services">4 distinct entities</a> engaged in the fields of asset management, inheritance and tax planning, family office and consulting to family businesses.</p>
-      <p class="copy-p">&copy; 2017 Beaulac S.A. Design : <a href="https://www.thecomputerfirm.com" target="blank" rel="nofollow">The Computer Firm</a></p>
+      <p>Basé à <a target="blank" href="https://www.google.ch/maps/place/The+Computer+Firm+-+Agence+Web+%26+Marketing+Suisse/@46.3938184,6.9237747,15z/data=!4m5!3m4!1s0x0:0xb5048ed14bd51bdc!8m2!3d46.3938184!4d6.9237747?sa=X&ved=0ahUKEwilu-3q99jWAhUCqxoKHTsUDxoQ_BIIajAL">
+        Villeneuve</a>, TCF TEMPLATE <a href="./#sous-services">TCF TEMPLATE</a> TCF TEMPLATE</p>
+      <p class="copy-p">&copy; TCF TEMPLATE : <a href="https://www.thecomputerfirm.com" target="blank" rel="nofollow">The Computer Firm</a></p>
     </div>
   </div>
   </div>
@@ -410,7 +407,6 @@
   <script type="text/javascript">
     getContent('Home - EN');
   </script>
-
 
 </body>
 </html>
