--- a/en/my_services/service1/index.html
+++ b/en/my_services/service1/index.html
@@ -6,7 +6,7 @@
 
 <!-- Meta data SEO
     ================================================== -->
-<title>Beaulac Industry & Finance - Small companies consulting and support</title>
+<title>TCF SERVICE1</title>
 <meta name="keywords" content="" />
 <meta name="description" content="The creation of the Beaulac Industry and Finance (BFI) originated from our knowledge of Corporate Finance, with the mission of supporting and accompanying Swiss small and medium companies as they expand internationally." />
 
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Beaulac Industry & Finance - Small companies consulting and support" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://wwww.nomdusite.ch" />
-<meta property="og:image" content="../../img/beaulac-industry-and-finance.jpg" />
+<meta property="og:image" content="../../../img/background_img.jpg" />
 <meta property="og:description" content="The creation of the Beaulac Industry and Finance (BFI) originated from our knowledge of Corporate Finance, with the mission of supporting and accompanying Swiss small and medium companies as they expand internationally." />
 <!-- Meta data SEO End-->
 
@@ -30,17 +30,17 @@
 
 <!-- Favicons
     ================================================== -->
-<link rel="shortcut icon" href="../../img/favicon.png" >
-<link rel="apple-touch-icon" href="../../img/favicon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="../../img/favicon.png">
-<link rel="apple-touch-icon" sizes="114x114" href="../../img/favicon.png">
+<link rel="shortcut icon" href="../../../img/favicon.png" >
+<link rel="apple-touch-icon" href="../../../img/favicon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../../../img/favicon.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../../../img/favicon.png">
 
 <!-- Bootstrap -->
-<link rel="stylesheet" type="text/css"  href="../../css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="../../fonts/font-awesome/../css/font-awesome.css">
+<link rel="stylesheet" type="text/css"  href="../../../css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="../../../fonts/font-awesome/../css/font-awesome.css">
 
 <!-- Animations -->
-<link rel="stylesheet" href="../../css/animate.min.css">
+<link rel="stylesheet" href="../../../css/animate.min.css">
 
 
 <!-- Slider
@@ -50,9 +50,9 @@
 
 <!-- Stylesheet
     ================================================== -->
-<link rel="stylesheet" type="text/css" href="../../css/style.css">
-<link rel="stylesheet" type="text/css" href="../../css/nivo-lightbox/nivo-lightbox.css">
-<link rel="stylesheet" type="text/css" href="../../css/nivo-lightbox/default.css">
+<link rel="stylesheet" type="text/css" href="../../../css/style.css">
+<link rel="stylesheet" type="text/css" href="../../../css/nivo-lightbox/nivo-lightbox.css">
+<link rel="stylesheet" type="text/css" href="../../../css/nivo-lightbox/default.css">
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -84,21 +84,18 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../about" class="page-scroll">About</a></li>
+            <li><a href="../../about" class="page-scroll">About</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Companies <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="../beaulac-sa">Beaulac S.A.</a></li>
-                <li><a href="../societe-financiere-des-bastions-sa">Société Financière des Bastions S.A. (SFB)</a></li>
-                <li><a href="../beaulac-management-services">Beaulac Management Services (BMS)</a></li>
-                <li><a href="../beaulac-industry-and-finance">Beaulac Industry and Finance (BIF)</a></li>
+                <li><a href="./">TCF SERVICE1</a></li>
               </ul>
             </li>
-            <li><a href="../#contact" class="page-scroll">Contact</a></li>
+            <li><a href="../../#contact" class="page-scroll">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">FR <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="../../fr/beaulac-industry-and-finance">Français</a></li>
+                <li><a href="../../../fr/my_services/service1">Français</a></li>
                 <li><a href="">English</a></li>
               </ul>
             </li>
@@ -110,17 +107,17 @@
     </nav>
 <!-- Header -->
 <header id="header">
-  <div class="intro intro-principale" style="background-image: url(../../img/beaulac-industry-and-finance.jpg); background-attachment: scroll;">
+  <div class="intro intro-principale" style="background-image: url(../../../img/background_img.jpg); background-attachment: scroll;">
       <div class="container image-bg">
         <div class="row section-ctn">
           <div class="col-md-offset-1 col-md-3 section-h2">
-            <h2 class="content" id="header-subtitle">Small companies consulting and support</h2>
+            <h2 class="content" id="header-subtitle">TCF SERVICE1</h2>
           </div>
           <div class="col-md-offset-1 col-md-7 section-main">
-            <h1 class="wow fadeInRight content" data-wow-duration="1s" id="header-title">Beaulac Industry & Finance</h1>
+            <h1 class="wow fadeInRight content" data-wow-duration="1s" id="header-title">TCF SERVICE1</h1>
             <hr class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
-            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="header-paragraphe1">The creation of the Beaulac Industry and Finance (BIF) originated from our knowledge of Corporate Finance, with the mission of supporting and accompanying Swiss small and medium companies as they expand internationally.</p>
-            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.3s" id="header-paragraphe2">BIF offers a broad spectrum of consulting services. Our goal is to increase the competitiveness of the companies we work with. We help the companies we work with make the best strategic decisions depending on the current economic landscape, their surrounding environment, and their specific business model.</p>
+            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="header-paragraphe1">TCF SERVICE1</p>
+            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.3s" id="header-paragraphe2">TCF SERVICE1</p>
           </div>
         </div>
       </div>
@@ -132,15 +129,15 @@
     <div class="row section-ctn">
       <div class="col-md-offset-1 col-md-7 col-sm-offset-2 col-sm-8 section-main">
         <div class=" col-md-6 col-sm-6 custom-list">
-          <h3 class="content" id="services-service1-title">On a national scale</h3>
-          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service1-item1">Search of financing and partnerships</p>
-          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service1-item2">Financial advice and and conduct of negotiations in case of acquisition of participations, mergers and acquisitions</p>
+          <h3 class="content" id="services-service1-title">TCF SERVICE1</h3>
+          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service1-item1">TCF SERVICE1</p>
+          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service1-item2">FTCF SERVICE1</p>
         </div>
         <div class=" col-md-6 col-sm-6 custom-list">
-          <h3 class="content" id="services-service1-title">On an international scale</h3>
-          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service2-item1">Incorporation and administration of subsidiaries abroad, reorganization of holding companies</p>
-          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service2-item2">Participation in negotiations on behalf of customers and final execution of transactions</p>
-          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.2s" id="services-service2-item3">Financing of international trade</p>
+          <h3 class="content" id="services-service1-title">TCF SERVICE1</h3>
+          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service2-item1">TCF SERVICE1/p>
+          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service2-item2">TCF SERVICE1</p>
+          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.2s" id="services-service2-item3">TCF SERVICE1</p>
         </div>
       </div>
       <div class="col-md-offset-0 col-md-1 col-sm-offset-2 col-sm-8 section-h2">
@@ -159,10 +156,10 @@
   <div class="container-fluid golden-bg">
     <div  class="row section-ctn">
       <div class="col-md-offset-1 col-md-7 section-main">
-        <h1 class="wow fadeInRight content" data-wow-duration="1s" id="section2-title">The complex world of International Corporate Finance </h1>
+        <h1 class="wow fadeInRight content" data-wow-duration="1s" id="section2-title">TCF SERVICE1 </h1>
         <hr class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
-        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe1">International corporate finance is governed by a number of complex regulations. The likelihood of being in an unfavorable position increases as a company enters foreign markets.</p>
-        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe2">Strongly internationally orientated, the Beaulac Group created the Beaulac Industry and Finance (BIF) to enhance the credibility of Swiss companies internationally. Our mission is to foster your competitive advantage while allowing you to focus on your core business and protecting your interests.</p>
+        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe1">TCF SERVICE1</p>
+        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe2">TCF SERVICE1</p>
       </div>
       <div class="decorative-trademark-ctn col-md-2">
         <img src="../../img/icons/decorative-trademark-white.svg" class="decorative-trademark bottom-right" alt="">
