--- a/fr/a-propos/index.html
+++ b/fr/a-propos/index.html
@@ -88,10 +88,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Sociétés <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="../beaulac-sa">Beaulac S.A.</a></li>
-                <li><a href="../societe-financiere-des-bastions-sa">Société Financière des Bastions S.A. (SFB)</a></li>
-                <li><a href="../beaulac-management-services">Beaulac Management Services (BMS)</a></li>
-                <li><a href="../beaulac-industry-and-finance">Beaulac Industry and Finance (BIF)</a></li>
+                <li><a href="../mes_services/service1">TCF APROPOS</a></li>
               </ul>
             </li>
             <li><a href="../../#contact" class="page-scroll">Contact</a></li>
@@ -110,11 +107,11 @@
     </nav>
 <!-- Header -->
 <header id="header">
-  <div class="intro intro-secondaire" style="background-image: url(../../img/beaulac-a-propos.jpg); background-attachment: scroll;">
+  <div class="intro intro-secondaire" style="background-image: url(../../img/background_img.jpg); background-attachment: scroll;">
       <div class="container image-bg">
         <div class="row section-ctn">
           <div class="col-md-offset-5 col-md-7 section-main">
-            <h1 class="wow fadeInRight content" data-wow-duration="1s" id="header-title">À propos du Groupe Beaulac</h1>
+            <h1 class="wow fadeInRight content" data-wow-duration="1s" id="header-title">TCF APROPOS</h1>
           </div>
         </div>
       </div>
@@ -126,20 +123,20 @@
     <div class="row section-ctn">
       <div class="col-md-offset-1 col-md-8 col-sm-offset-2 col-sm-8 section-main">
           <div class=" col-md-6 col-sm-6 wow fadeInUp" data-wow-duration="1s">
-            <h3 class="uppercase content" id="services-element1-title">Indépendance</h3>
-            <p class="content" id="services-element1-paragraphe">Nous avons développé des relations privilégiées avec nos partenaires, nous permettant de vous donner accès aux meilleurs produits financiers. Nous opérons en indépendance totale de tout groupe bancaire ou financier, exclusivement dans l’intérêt de nos clients. Notre seul but est de rechercher la meilleure rentabilité dans des investissements de qualité.</p>
+            <h3 class="uppercase content" id="services-element1-title">TCF APROPOS</h3>
+            <p class="content" id="services-element1-paragraphe">TCF APROPOS</p>
           </div>
           <div class=" col-md-6 col-sm-6 wow fadeInUp" data-wow-duration="1s">
-            <h3 class="uppercase content" id="services-element2-title">Réactivité</h3>
-            <p class="content" id="services-element2-paragraphe">Notre coeur de métier est d’être au fait des évolutions économiques et géopolitiques, afin d’anticiper leur impact sur vos placements financiers. Nous bénéficions d’un accès direct à l’information financière et boursière. Ainsi, nous effectuons une veille stratégique permanente afin de vous proposer les meilleures opportunités au moment où elles se présentent.</p>
+            <h3 class="uppercase content" id="services-element2-title">TCF APROPOS</h3>
+            <p class="content" id="services-element2-paragraphe">TCF APROPOS</p>
           </div>
           <div class=" col-md-6 col-sm-6 wow fadeInUp" data-wow-duration="1s">
-            <h3 class="uppercase content" id="services-element3-title">Loyauté</h3>
-            <p class="content" id="services-element3-paragraphe">À près de trente ans d’existence, le Groupe Beaulac est fier d’avoir créé des relations de confiance et de respect mutuel de long terme avec ses clients. Nous vous garantissons des interlocuteurs stables, un contact personnalisé et régulier, ainsi qu’une transparence de nos prises de décisions relatives à votre patrimoine.</p>
+            <h3 class="uppercase content" id="services-element3-title">TCF APROPOS</h3>
+            <p class="content" id="services-element3-paragraphe">TCF APROPOS</p>
           </div>
           <div class="col-md-6 col-sm-6 wow fadeInUp" data-wow-duration="1s">
-            <h3 class="uppercase content" id="services-element4-title">Diligence</h3>
-            <p class="content" id="services-element4-paragraphe">Nous travaillons dans le respect le plus strict des législations en vigueur dans les juridictions dans lesquelles nous opérons. Nos actions ainsi que le choix de nos partenaires sont régis par des principes déontologiques forts : éthique, transparence, et absence de conflits d’intérêts.</p>
+            <h3 class="uppercase content" id="services-element4-title">TCF APROPOS</h3>
+            <p class="content" id="services-element4-paragraphe">TCF APROPOS</p>
           </div>
 
 
@@ -160,17 +157,17 @@
   <div class="container-fluid blue-bg">
     <div  class="row section-ctn">
       <div class="col-md-offset-2 col-md-2 col-sm-offset-2 col-sm-8 section-h2">
-          <h2 class="wow fadeInUp content" id="section2-title">Accréditations & Environnement</h2>
+          <h2 class="wow fadeInUp content" id="section2-title">TCF APROPOS </h2>
       </div>
       <div class="col-md-offset-1 col-md-5 col-sm-offset-2 col-sm-8 section-main">
-          <p class="content" id="section2-paragraphe1">Le Groupe Beaulac évolue dans un environnement complexe, en permanente mutation. Aucune place n’est laissée aux approximations et à l’improvisation. Nos collaborateurs travaillent dans le plus grand respect de la vie privée de nos clients, en toute confidentialité et discrétion.</p>
-          <p class="content" id="section2-paragraphe2">Notre profession exige un fort sens de l’éthique, et le suivi des mêmes règles de déontologie qui régissent l’ensemble des banques et des intermédiaires financiers suisses.</p>
+          <p class="content" id="section2-paragraphe1">TCF APROPOS</p>
+          <p class="content" id="section2-paragraphe2">TCF APROPOS</p>
           <p class="content" id="section2-paragraphe3">Nous sommes membres de :</p>
 
-          <p class="accreditation"><img src="../../img/logos/arif.png" class="logo-accreditation" alt=""><text class="content" id="section2-paragraphe4">L’ARIF, Association Romande des Intermédiaires Financiers, soumise au contrôle de la FINMA.</text></p>
+          <p class="accreditation"><img src="../../img/logos/arif.png" class="logo-accreditation" alt=""><text class="content" id="section2-paragraphe4">TCF APROPOS</text></p>
 
-          <p class="accreditation"><img src="../../img/logos/gscgi.png" class="logo-accreditation" alt=""><text class="content" id="section2-paragraphe5">Le GSCGI, le Groupement Suisse des Conseils en Gestion Indépendants</text></p>
-          <p class="content" id="section2-paragraphe6">En tant que membre de ces deux organismes faîtiers, reconnus par l’Autorité Fédérale de Contrôle en matière de lutte contre le blanchiment d’argent (ACLBA), le Groupe Beaulac souscrit à leurs chartes de déontologie et assure ainsi à ses clients un sérieux et une qualité indiscutable, critères indispensables pour faire partie de ces organismes.</p>
+          <p class="accreditation"><img src="../../img/logos/gscgi.png" class="logo-accreditation" alt=""><text class="content" id="section2-paragraphe5">TCF APROPOS</text></p>
+          <p class="content" id="section2-paragraphe6">TCF APROPOS</p>
       </div>
     </div>
 
@@ -188,7 +185,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element1-title">Création de Beaulac SA</p>
+            <p class="content" id="section3-element1-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -200,7 +197,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element2-title">Achat et emménagement dans les nouveaux locaux dans le quartier prestigieux de Champel à Genève</p>
+            <p class="content" id="section3-element2-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -212,7 +209,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element3-title">Acquisition de la clientèle de Thalmann S.A., Genève</p>
+            <p class="content" id="section3-element3-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -223,7 +220,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element4-title">Sommet Afrique-Europe à Genève</p>
+            <p class="content" id="section3-element4-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -235,7 +232,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element5-title">Sommet Afrique-Europe à Genève</p>
+            <p class="content" id="section3-element5-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -247,7 +244,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element6-title">Sommet Afrique-Europe à Genève</p>
+            <p class="content" id="section3-element6-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -259,7 +256,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element7-title">Sommet à Cotonou, Bénin et à Lomé, Togo</p>
+            <p class="content" id="section3-element7-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -271,7 +268,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element8-title">Sommet Afrique-Europe à Genève</p>
+            <p class="content" id="section3-element8-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -283,7 +280,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element9-title">Acquisition de la clientèle de Wicki Invest S.A., Genève </p>
+            <p class="content" id="section3-element9-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -295,7 +292,7 @@
 
         <div class="row wow fadeInUp" data-wow-duration="1s">
           <div class="col-md-6 text">
-            <p class="content" id="section3-element10-title">30 ans du Groupe Beaulac</p>
+            <p class="content" id="section3-element10-title">TCF APROPOS</p>
           </div>
           <div class="col-md-offset-1 col-md-4 date-panel">
             <div class="date-ctn">
@@ -306,7 +303,7 @@
 
       </div>
       <div class="col-md-offset-0 col-md-1 col-sm-offset-2 col-sm-8 section-h2">
-          <h2 class="wow fadeInUp content" id="section3-title">Notre Histoire</h2>
+          <h2 class="wow fadeInUp content" id="section3-title">TCF APROPOS</h2>
       </div>
   </div>
 </div>
@@ -357,10 +354,10 @@
   <div class="container-fluid golden-bg">
     <div class="row section-ctn">
       <div class="col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-8 section-h2">
-          <h2 class="wow fadeInUp">carrière</h2>
+          <h2 class="wow fadeInUp">Career</h2>
       </div>
       <div class="col-md-offset-1 col-md-4 col-sm-offset-2 col-sm-8 section-main">
-          <p>Vous avez un profil intéressant ? N’hésitez pas à envoyer CV et lettre de motivation à <a href="mailto:info@beaulacgroup.ch" style="color:white;">info@beaulacgroup.ch.</a></p>
+          <p>TCF About<a href="mailto:tcf@tcf.ch" style="color:white;">tcf@tcf.ch.</a></p>
       </div>
     </div>
   </div>
@@ -390,7 +387,7 @@
     <div id="footer-menu-socitetes" class="col-md-3">
       <div class="text-left">
         <ul>
-          <li class="list-title">4 entités distinctes</li>
+          <li class="list-title">4 distinct entities</li>
           <li><a href="../beaulac-sa">Beaulac S.A. </a></li>
           <li><a href="../societe-financiere-des-bastions-sa">Société Financière des Bastions S.A. (SFB)</a></li>
           <li><a href="../beaulac-management-services">Beaulac Management Services (BMS)</a></li>
@@ -401,19 +398,20 @@
     <div id="footer-menu-group" class="col-md-3">
       <div class="text-left">
         <ul>
-          <li class="list-title">À Propos du groupe</li>
-          <li><a href="../a-propos#valeurs">Nos valeurs</a></li>
-          <li><a href="../a-propos#accreditations-environnement">Accréditations et environnement</a></li>
-          <li><a href="../a-propos#histoire">Notre histoire</a></li>
-          <li><a href="../a-propos#equipe">Notre équipe</a></li>
-          <li><a target="_blank" href="http://www.geneve-finance.ch/">La place financière de Genève</a></li>
+          <li class="list-title">About the Group</li>
+          <li><a href="../about#valeurs">Our values</a></li>
+          <li><a href="../about#accreditations-environnement">Accreditations & environment</a></li>
+          <li><a href="../about#histoire">Our history</a></li>
+          <li><a href="../about#equipe">Our team</a></li>
+          <li><a target="_blank" href="http://www.geneve-finance.ch/en-ch/overview">Geneva's financial place</a></li>
+
         </ul>
       </div>
 
     </div>
     <div id="footer-about-copyright" class="col-md-3">
-      <p>Basé à <a target="blank" href="https://www.google.ch/maps/place/Beaulac+SA,+Soci%C3%A9t%C3%A9+Financi%C3%A8re+d+Investissement/@46.1917077,6.1643105,17z/data=!3m1!4b1!4m5!3m4!1s0x478c7ab3ff7d091d:0xf696e6d5d8717c08!8m2!3d46.1917077!4d6.1664992?hl=en">
-        Genève</a>, le Groupe Beaulac se compose de <a href="../../#sous-services">4 entités distinctes</a> actives dans les domaines de la gestion de patrimoine, la planification fiscale et successorale, le family office et le conseil aux PME.</p>
+      <p>Based in <a target="blank" href="https://www.google.ch/maps/place/Beaulac+SA,+Soci%C3%A9t%C3%A9+Financi%C3%A8re+d+Investissement/@46.1917077,6.1643105,17z/data=!3m1!4b1!4m5!3m4!1s0x478c7ab3ff7d091d:0xf696e6d5d8717c08!8m2!3d46.1917077!4d6.1664992?hl=en">
+        Geneva</a>, Beaulac Group is comprised of <a href="../#sous-services">4 distinct entities</a> engaged in the fields of asset management, inheritance and tax planning, family office and consulting to family businesses.</p>
       <p class="copy-p">&copy; 2017 Beaulac S.A. Design : <a href="https://www.thecomputerfirm.com" target="blank" rel="nofollow">The Computer Firm</a></p>
     </div>
   </div>
