--- a/fr/mes_services/service1/index.html
+++ b/fr/mes_services/service1/index.html
@@ -6,7 +6,7 @@
 
 <!-- Meta data SEO
     ================================================== -->
-<title>Beaulac Industry & Finance - Conseil et soutien aux PME</title>
+<title>TCF SERVICE1</title>
 <meta name="keywords" content="" />
 <meta name="description" content="Nos connaissances en matière de Corporate Finance sont à l’origine de la création de Beaulac Industry and Finance (BIF), dont la mission est d’accompagner et de soutenir les PME à l’international." />
 
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Beaulac Industry & Finance - Conseil et soutien aux PME" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://wwww.nomdusite.ch" />
-<meta property="og:image" content="../../img/beaulac-industry-and-finance.jpg" />
+<meta property="og:image" content="../../img/background_img.jpg" />
 <meta property="og:description" content="Nos connaissances en matière de Corporate Finance sont à l’origine de la création de Beaulac Industry and Finance (BIF), dont la mission est d’accompagner et de soutenir les PME à l’international." />
 <!-- Meta data SEO End-->
 
@@ -30,14 +30,14 @@
 
 <!-- Favicons
     ================================================== -->
-<link rel="shortcut icon" href="../../img/favicon.png" >
-<link rel="apple-touch-icon" href="../../img/favicon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="../../img/favicon.png">
-<link rel="apple-touch-icon" sizes="114x114" href="../../img/favicon.png">
+<link rel="shortcut icon" href="../../../img/favicon.png" >
+<link rel="apple-touch-icon" href="../../../img/favicon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../../../img/favicon.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../../../img/favicon.png">
 
 <!-- Bootstrap -->
-<link rel="stylesheet" type="text/css"  href="../../css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="../../fonts/font-awesome/../css/font-awesome.css">
+<link rel="stylesheet" type="text/css"  href="../../../css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="../../../fonts/font-awesome/../css/font-awesome.css">
 
 <!-- Animations -->
 <link rel="stylesheet" href="../../css/animate.min.css">
@@ -50,9 +50,9 @@
 
 <!-- Stylesheet
     ================================================== -->
-<link rel="stylesheet" type="text/css" href="../../css/style.css">
-<link rel="stylesheet" type="text/css" href="../../css/nivo-lightbox/nivo-lightbox.css">
-<link rel="stylesheet" type="text/css" href="../../css/nivo-lightbox/default.css">
+<link rel="stylesheet" type="text/css" href="../../../css/style.css">
+<link rel="stylesheet" type="text/css" href="../../../css/nivo-lightbox/nivo-lightbox.css">
+<link rel="stylesheet" type="text/css" href="../../../css/nivo-lightbox/default.css">
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -88,10 +88,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Sociétés <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="../beaulac-sa">Beaulac S.A.</a></li>
-                <li><a href="../societe-financiere-des-bastions-sa">Société Financière des Bastions S.A. (SFB)</a></li>
-                <li><a href="../beaulac-management-services">Beaulac Management Services (BMS)</a></li>
-                <li><a href="../beaulac-industry-and-finance">Beaulac Industry and Finance (BIF)</a></li>
+                <li><a href="./">TCF SERVICE1</a></li>
               </ul>
             </li>
             <li><a href="../../#contact" class="page-scroll">Contact</a></li>
@@ -99,7 +96,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">FR <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="">Français</a></li>
-                <li><a href="../../en/beaulac-industry-and-finance">English</a></li>
+                <li><a href="../../../en/my_services/service1">English</a></li>
               </ul>
             </li>
           </ul>
@@ -110,17 +107,17 @@
     </nav>
 <!-- Header -->
 <header id="header">
-  <div class="intro intro-principale" style="background-image: url(../../img/beaulac-industry-and-finance.jpg); background-attachment: scroll;">
+  <div class="intro intro-principale" style="background-image: url(../../../img/background_img.jpg); background-attachment: scroll;">
       <div class="container image-bg">
         <div class="row section-ctn">
           <div class="col-md-offset-1 col-md-3 section-h2">
-            <h2 class="content" id="header-subtitle">Conseil et soutien aux PME</h2>
+            <h2 class="content" id="header-subtitle">TCF SERVICE1</h2>
           </div>
           <div class="col-md-offset-1 col-md-7 section-main">
-            <h1 class="wow fadeInRight content" data-wow-duration="1s" id="header-title">Beaulac Industry & Finance</h1>
+            <h1 class="wow fadeInRight content" data-wow-duration="1s" id="header-title">TCF SERVICE1</h1>
             <hr class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
-            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="header-paragraphe1">Nos connaissances en matière de Corporate Finance sont à l’origine de la création de  Beaulac Industry and Finance (BIF), dont la mission est d’accompagner et de soutenir les PME à l’international.</p>
-            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.3s" id="header-paragraphe2">Nous offrons ainsi une large gamme de services de conseil. Notre objectif est de rendre les sociétés avec lesquelles nous travaillons plus compétitives, et de les aider à prendre les meilleures décisions stratégiques en fonction de la conjoncture, de leur environnement, et de leur business model.</p>
+            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="header-paragraphe1">TCF SERVICE1</p>
+            <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.3s" id="header-paragraphe2">TCF SERVICE1</p>
           </div>
         </div>
       </div>
@@ -132,19 +129,19 @@
     <div class="row section-ctn">
       <div class="col-md-offset-1 col-md-7 col-sm-offset-2 col-sm-8 section-main">
         <div class=" col-md-6 col-sm-6 custom-list">
-          <h3 class="content" id="services-service1-title">À l’échelle nationale</h3>
-          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service1-item1">Recherche de partenaires et de financement</p>
-          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service1-item2">Conduite des négociations et conseils financiers dans des fusions-acquisitions, restructurations ou prises de participation</p>
+          <h3 class="content" id="services-service1-title">TCF SERVICE1</h3>
+          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service1-item1">TCF SERVICE1</p>
+          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service1-item2">TCF SERVICE1</p>
         </div>
         <div class=" col-md-6 col-sm-6 custom-list">
-          <h3 class="content" id="services-service2-title">À l’échelle internationale</h3>
-          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service2-item1">Constitution et administration de filiales à l’étranger et de holdings</p>
-          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service2-item2">Participation aux négociations pour compte des clients et exécution finale des transactions</p>
-          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.2s" id="services-service2-item3">Financement du négoce international</p>
+          <h3 class="content" id="services-service2-title">TCF SERVICE1</h3>
+          <p class="wow fadeInUp content" data-wow-duration="1s" id="services-service2-item1">TCF SERVICE1</p>
+          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.1s" id="services-service2-item2">TCF SERVICE1</p>
+          <p class="wow fadeInUp content" data-wow-duration="1s" data-wow-delay="0.2s" id="services-service2-item3">TCF SERVICE1/p>
         </div>
       </div>
       <div class="col-md-offset-0 col-md-1 col-sm-offset-2 col-sm-8 section-h2">
-          <h2 class="content" id="services-title">Nos Services</h2>
+          <h2 class="content" id="services-title">TCF SERVICE1</h2>
       </div>
 
   </div>
@@ -159,10 +156,10 @@
   <div class="container-fluid golden-bg">
     <div  class="row section-ctn">
       <div class="col-md-offset-1 col-md-7 section-main">
-        <h1 class="wow fadeInRight content" data-wow-duration="1s" id="section2-title">Le monde complexe de la Corporate Finance internationale</h1>
+        <h1 class="wow fadeInRight content" data-wow-duration="1s" id="section2-title">TCF SERVICE1</h1>
         <hr class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.3s">
-        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe1">La finance d’entreprise internationale est régie par de nombreuses règles complexes. La probabilité de se retrouver désavantagée augmente lorsqu’une entreprise pénètre dans un marché qui lui est étranger.</p>
-        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe2">Le Groupe Beaulac, d’orientation résolument internationale, a créé Beaulac Industry and Finance (BIF) pour crédibiliser les sociétés locales à l’étranger, augmenter votre avantage concurrentiel, et vous permettre de vous concentrer sur votre coeur de métier tout en protégeant vos intérêts.</p>
+        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe1">TCF SERVICE1</p>
+        <p class="wow fadeInRight content" data-wow-duration="1s" data-wow-delay="0.2s" id="section2-paragraphe2">TCF SERVICE1</p>
       </div>
       <div class="decorative-trademark-ctn col-md-2">
         <img src="../../img/icons/decorative-trademark-white.svg" class="decorative-trademark bottom-right" alt="">
@@ -176,7 +173,7 @@
   <div class="container text-center">
     <div class="row text-left">
       <div class="col-md-12">
-        <a class="page-scroll" href="#page-top"><img alt="Altras Sécurité" src="../../img/logo.png"></a>
+        <a class="page-scroll" href="#page-top"><img alt="Altras Sécurité" src="./img/logo.png"></a>
       </div>
     </div>
     <div id="footer-ctn" class="row">
@@ -184,66 +181,64 @@
       <ul>
         <li class="content-adresseLine1">
           <a target="_blank" href="https://www.google.ch/maps/place/Beaulac+SA,+Soci%C3%A9t%C3%A9+Financi%C3%A8re+d+Investissement/@46.1917077,6.1643105,17z/data=!3m1!4b1!4m5!3m4!1s0x478c7ab3ff7d091d:0xf696e6d5d8717c08!8m2!3d46.1917077!4d6.1664992?hl=en">
-          4, Ch. Doctoresse-Champendal</a></li>
+          28, Rue des Remparts</a></li>
         <li class="content-adresseLine2">P.O. Box 62</li>
-        <li><text class="content-zip">CH - 1211 </text> <text class="content-city">Genève 12</text></li>
-        <li>Tél. : <a href="tel:+41227040880" class="content-phone1">+41 22 704 08 80</a></li>
-        <li>Fax : <a class="content-fax" href="fax:+41227040888">+41 22 704 08 88</a></li>
-        <li><a href="mailto:info@beaulacgroup.ch" class="content-email1">info@beaulacgroup.ch</a></li>
+        <li><text class="content-zip">CH - 1844 </text> <text class="content-city">Villeneuve</text></li>
+        <li>Tél. : <a href="tel:+41227040880" class="content-phone1">+41 22 999 99 99</a></li>
+        <li>Fax : <a class="content-fax" href="fax:+41227040888">+41 22 999 99 99</a></li>
+        <li><a href="mailto:info@beaulacgroup.ch" class="content-email1">tcf@tcf.ch</a></li>
       </ul>
     </div>
     <div id="footer-menu-socitetes" class="col-md-3">
       <div class="text-left">
         <ul>
-          <li class="list-title">4 entités distinctes</li>
-          <li><a href="../beaulac-sa">Beaulac S.A. </a></li>
-          <li><a href="../societe-financiere-des-bastions-sa">Société Financière des Bastions S.A. (SFB)</a></li>
-          <li><a href="../beaulac-management-services">Beaulac Management Services (BMS)</a></li>
-          <li><a href="../beaulac-industry-and-finance">Beaulac Industry and Finance (BIF)</a></li>
+          <li class="list-title">TCF TEMPLATE</li>
+          <li><a href="./fr/beaulac-sa">TCF TEMPLATE </a></li>
+          <li><a href="./fr/societe-financiere-des-bastions-sa">TCF TEMPLATE</a></li>
+          <li><a href="./fr/beaulac-management-services">TCF TEMPLATE</a></li>
+          <li><a href="./fr/beaulac-industry-and-finance">TCF TEMPLATE</a></li>
         </ul>
       </div>
     </div>
     <div id="footer-menu-group" class="col-md-3">
       <div class="text-left">
         <ul>
-          <li class="list-title">À Propos du groupe</li>
-          <li><a href="../a-propos#valeurs">Nos valeurs</a></li>
-          <li><a href="../a-propos#accreditations-environnement">Accréditations et environnement</a></li>
-          <li><a href="../a-propos#histoire">Notre histoire</a></li>
-          <li><a href="../a-propos#equipe">Notre équipe</a></li>
-          <li><a target="_blank" href="http://www.geneve-finance.ch/">La place financière de Genève</a></li>
-
+          <li class="list-title">TCF TEMPLATE</li>
+          <li><a href="./fr/a-propos#valeurs">TCF TEMPLATE</a></li>
+          <li><a href="./fr/a-propos#accreditations-environnement">TCF TEMPLATE</a></li>
+          <li><a href="./fr/a-propos#histoire">TCF TEMPLATE</a></li>
+          <li><a href="./fr/a-propos#equipe">TCF TEMPLATE</a></li>
+          <li><a target="_blank" href="http://www.thecomputerfirm.com">TCF TEMPLATE</a></li>
         </ul>
       </div>
 
     </div>
     <div id="footer-about-copyright" class="col-md-3">
-      <p>Basé à <a target="blank" href="https://www.google.ch/maps/place/Beaulac+SA,+Soci%C3%A9t%C3%A9+Financi%C3%A8re+d+Investissement/@46.1917077,6.1643105,17z/data=!3m1!4b1!4m5!3m4!1s0x478c7ab3ff7d091d:0xf696e6d5d8717c08!8m2!3d46.1917077!4d6.1664992?hl=en">
-        Genève</a>, le Groupe Beaulac se compose de <a href="../../#sous-services">4 entités distinctes</a> actives dans les domaines de la gestion de patrimoine, la planification fiscale et successorale, le family office et le conseil aux PME.</p>
-      <p class="copy-p">&copy; 2017 Beaulac S.A. Design : <a href="https://www.thecomputerfirm.com" target="blank" rel="nofollow">The Computer Firm</a></p>
+      <p>Basé à <a target="blank" href="https://www.google.ch/maps/place/The+Computer+Firm+-+Agence+Web+%26+Marketing+Suisse/@46.3938184,6.9237747,15z/data=!4m5!3m4!1s0x0:0xb5048ed14bd51bdc!8m2!3d46.3938184!4d6.9237747?sa=X&ved=0ahUKEwilu-3q99jWAhUCqxoKHTsUDxoQ_BIIajAL">
+        Villeneuve</a>, TCF TEMPLATE <a href="./#sous-services">TCF TEMPLATE</a> TCF TEMPLATE</p>
+      <p class="copy-p">&copy; TCF TEMPLATE : <a href="https://www.thecomputerfirm.com" target="blank" rel="nofollow">The Computer Firm</a></p>
     </div>
   </div>
   </div>
 </div>
-
 <!-- Scripts -->
-<script type="text/javascript" src="../../js/jquery.1.11.1.js"></script>
-<script type="text/javascript" src="../../js/bootstrap.js"></script>
-<script type="text/javascript" src="../../js/SmoothScroll.js"></script>
-<script type="text/javascript" src="../../js/nivo-lightbox.js"></script>
-<script type="text/javascript" src="../../js/jquery.isotope.js"></script>
-<script type="text/javascript" src="../../js/owl.carousel.js"></script>
-<script type="text/javascript" src="../../js/jqBootstrapValidation.js"></script>
+<script type="text/javascript" src="../../../js/jquery.1.11.1.js"></script>
+<script type="text/javascript" src="../../../js/bootstrap.js"></script>
+<script type="text/javascript" src="../../../js/SmoothScroll.js"></script>
+<script type="text/javascript" src="../../../js/nivo-lightbox.js"></script>
+<script type="text/javascript" src="../../../js/jquery.isotope.js"></script>
+<script type="text/javascript" src="../../../js/owl.carousel.js"></script>
+<script type="text/javascript" src="../../../js/jqBootstrapValidation.js"></script>
 <!-- <script type="text/javascript" src="../js/contact_me.js"></script> -->
-<script type="text/javascript" src="../../js/main.js"></script>
-<script type="text/javascript" src="../../js/content.js"></script>
+<script type="text/javascript" src="../../../js/main.js"></script>
+<script type="text/javascript" src="../../../js/content.js"></script>
 <script src="../../js/wow.min.js"></script>
   <script>
     new WOW().init();
   </script>
 
-  <script src='../../js/nprogress.js'></script>
-  <link rel='stylesheet' href='../../css/nprogress.css'/>
+  <script src='../../../js/nprogress.js'></script>
+  <link rel='stylesheet' href='../../../css/nprogress.css'/>
 
   <script type="text/javascript">
     getContent('BIF');
